# SNIPBOX

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
snipboxconfig/: asgi.py  pagination_config.py  permissions.py  settings.py  urls.py  wsgi.py
snippets/: auth_serializers.py  auth_views.py  models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
