[project]
name = "SNIPBOX"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rahulks", email = "rahulrahu151999@gmail.com"},
]
dependencies = ["django>=6.0.2", "djangorestframework>=3.16.1", "djangorestframework-simplejwt>=5.5.1", "psycopg[binary]>=3.3.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
test = "python manage.py test"
createsuperuser = "python manage.py createsuperuser"
shell = "python manage.py shell"